--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.9",
     "@uploadthing/react": "^6.1.0",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +31,7 @@
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "query-string": "^8.1.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
